@@ -1,3 +1,7 @@
+2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
+	* server-src/planner.c: extripate XML DLE estimate generation out of
+	  getsize() into a new helper function
+
 2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
 	* client-src/sendsize.c: remove the second usage of vstrextend() by
 	  using g_ptr_array_free(..., FALSE) and g_strjoinv() on an existing
